# Marketing-Intelligence-Architect

./: .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  PROJECT.md  PROJECT_LOG.md  README.md  REQUIREMENTS.md  ROADMAP.md  TASKS.md  UX_UI_PRINCIPLES.md  pyproject.toml
docs/: WINDOWS.md
src/marketing_intelligence/: __init__.py  availability.py  change_event.py  change_event_detail.py  change_event_export.py  change_event_filters.py  change_event_persistence.py  change_event_presentation.py  change_event_query.py  change_event_view_state.py  change_importance.py  check_history.py  completed_crawl_processing.py  config.py  confirmation.py  crawl_dispatcher.py  crawl_history.py  crawl_settings.py  crawler.py  database.py  gsc_csv.py  gsc_persistence.py  gsc_preview.py  gsc_query.py  integrations.py  (+22 more)
tests/: test_app.py  test_availability.py  test_change_event_detail.py  test_change_event_filters.py  test_change_event_persistence.py  test_change_event_query.py  test_change_event_view_export.py  test_crawl_history.py  test_crawler.py  test_gsc_import.py  test_gsc_import_loopback.py  test_integrations.py  test_integrations_loopback.py  test_link_discovery.py  test_manual_crawl.py  test_page_content.py  test_price_change_history.py  test_scheduler.py  test_scheduler_loopback.py  test_site_separation.py  test_site_separation_loopback.py  test_site_structure.py  test_site_structure_analysis.py  test_snapshot_comparison_aggregation.py  test_snapshot_internal_link_comparison.py  test_snapshot_metadata_comparison.py  test_snapshot_page_matching.py  test_snapshot_pair_storage.py  test_snapshot_text_comparison.py
(+33 files in other folders)
