[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-intelligence"
version = "0.1.0"
description = "Локальная основа приложения Marketing Intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "APScheduler>=3.11.3,<4.0",
    "cryptography>=49,<50",
    "beautifulsoup4>=4.13,<5.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "jinja2>=3.1,<4.0",
    "lxml>=5.3,<7.0",
    "python-multipart>=0.0.32,<1.0",
    "sqlmodel>=0.0.24,<0.1",
    "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
marketing_intelligence = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
